<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backGround"
    android:alpha="0.97"
    tools:context="com.weiaibenpao.demo.chislim.ui.MarkActivity">
    <RelativeLayout
        android:id="@+id/toplayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backGround">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back"/>
        <TextView
            android:id="@+id/titleTv"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="积分规则"
            android:textColor="@color/backWord"
            android:textStyle="bold" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_below="@+id/toplayout"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/backWord"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/mark1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/backWord"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/mark2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/backWord"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/mark3"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/backWord"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/mark4"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/backWord"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/mark5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/backWord"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/mark6"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/backWord"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/mark7"/>
    </LinearLayout>

</RelativeLayout>
